# esdmit

./: .gitignore  README.md  result_validation.m
ReferencyjneDane2/: Class_IDs_all.txt  Class_IDs_all.txt.old  ReferencyjneDane2.rar  label_reused.txt
ReferencyjneDane2/100/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/101/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/102/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/103/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/104/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/105/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/106/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/108/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt  annotations.txt
ReferencyjneDane2/109/: Class_IDs_2.txt  annotations.txt  (+1 more)
matlab/: classificator_normalization.m  features_vector.asv  features_vector.m  gradient2.m  import_class_id.m  import_data.asv  import_data.m  main.asv  main.m  quad_kernel_size.m  sig_sqrt.m  train_multi_svm.m  train_svm_grad.m
tests_results/: quadratic_table.txt  results.txt
visual/: CMakeLists.txt
visual/esdmit_svm/: BinarySVM.cpp  BinarySVM.h  CMakeCache.txt  FileLoader.hpp  Makefile  MultiSVM.cpp  MultiSVM.h  ReadMe.txt  SVM.cpp  SVM.h  cmake_install.cmake  correct_outputs.txt  esdmit_svm  esdmit_svm.cpp  esdmit_svm.sln  esdmit_svm.vcxproj  esdmit_svm.vcxproj.filters  stdafx.cpp
(+387 files in other folders)
